# YachtSimulator

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: macos.yml  pre-commit.yml  ubuntu.yml  ubuntu_codecov.yml  window.yml
Builds/CMake/: CompileOptions.cmake
Includes/Common/: Constants.hpp  Logger.hpp  Macros.hpp
Includes/Components/Common/: Constants.hpp  Logger.hpp  Macros.hpp
Includes/Components/Game/: Dice.hpp  Player.hpp  ScoreBoard.hpp
Includes/Components/Model/: Dice.hpp  Player.hpp  ScoreBoard.hpp
Includes/Components/Network/: Network.hpp
Includes/Components/Renderer/: Camera.hpp  Device.hpp  Initializer.hpp  Pipeline.hpp  RenderSystem.hpp  Renderer.hpp  Resource.hpp  SwapChain.hpp  Utils.hpp  Window.hpp
Includes/Model/: Player.hpp  ScoreBoard.hpp
Includes/Renderer/: Device.hpp  Initializer.hpp  Pipeline.hpp  Renderer.hpp  Resource.hpp  SwapChain.hpp  Window.hpp
Includes/Yacht/: Application.hpp
Libraries/vkbootstrap/: CMakeLists.txt
Libraries/volk/: CMakeLists.txt
Resources/scenes/yachtdice/: scene.gltf
Resources/shaders/: default_lit.frag  tri_mesh.vert
Sources/: CMakeLists.txt  main.cpp
Sources/Components/Common/: CMakeLists.txt  Logger.cpp
Sources/Components/Game/: CMakeLists.txt  Dice.cpp  Player.cpp  ScoreBoard.cpp
Sources/Components/Model/: CMakeLists.txt  Dice.cpp  Player.cpp  ScoreBoard.cpp
Sources/Components/Network/: CMakeLists.txt  Network.cpp
Sources/Components/Renderer/: CMakeLists.txt  Device.cpp  Initializer.cpp  Pipeline.cpp  RenderSystem.cpp  Renderer.cpp  Resource.cpp  SwapChain.cpp  Utils.cpp  Window.cpp
Sources/Renderer/: Device.cpp  Initializer.cpp  Resource.cpp  SwapChain.cpp  Window.cpp
Sources/Yacht/: Application.cpp  CMakeLists.txt  main.cpp
Tests/UnitTests/: CMakeLists.txt  ConstantsTest.cpp
